plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group
archivesBaseName = project.archives_base_name

repositories {
    mavenCentral()
    maven { url = "https://maven.terraformersmc.com/releases/" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.minecraft_version}+build.3:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    modCompileOnly "com.terraformersmc:modmenu:11.0.3"

    // Skija (HumbleUI Skia bindings) — same line as the Tuui mod used.
    include(implementation("io.github.humbleui:skija-shared:${project.skija_version}"))
    include(implementation("io.github.humbleui:types:0.1.1"))
    // Windows x64 native. Add linux/mac natives when publishing cross-platform.
    include(implementation("io.github.humbleui:skija-windows-x64:${project.skija_version}"))

    // FlatLaf gives the Swing image picker a modern flat look instead of the
    // dated default Metal one. Bundled so the look and feel works offline.
    include(implementation("com.formdev:flatlaf:${project.flatlaf_version}"))

    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') { expand version: project.version }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
    options.encoding = 'UTF-8'
}

java {
    withSourcesJar()
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

loom {
    accessWidenerPath = file("src/main/resources/atomchat.accesswidener")
}
